# quadruped

./: .gitignore  Cargo.toml
proptest-regressions/legs/: ik2d.txt  planar.txt
src/: Cargo.toml  lib.rs  main.rs
src/core/: lib.rs
src/core/legs/: planar.rs
src/core/proptest-regressions/legs/: planar.txt
src/core/proptest-regressions/util/: find_triangle_point.txt
src/core/util/: planar.rs  proptest_util.rs  pseudo_angle.rs  simd.rs
src/leg_tools/: Cargo.toml
src/leg_tools/leg2d_visualisation/: main.rs
src/legs/: ik2d.rs  mod.rs  planar.rs
src/util/: find_triangle_point.rs  mod.rs  planar.rs  proptest_util.rs  pseudo_angle.rs
