[package]
name = "quadruped"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.30.1", features = ["proptest-support"] }

[dev-dependencies]
proptest = "1.0.0"
test-strategy = "0.1.2"
approx = "0.5.1"
test-case = "2.2.2"
more-asserts = "0.3.1"
