[package]
name = "quadruped"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "leg2d_visualisation"
required-features = ["graphics"]

[lib]
name = "quadruped"

[features]
default = ["graphics"]
graphics = ["dep:ggez"]

[dependencies]
clap = {version = "4.4.6", features = ["derive"]}
ggez = { version = "0.9.3", optional = true }
nalgebra = { version = "0.33.2", features = ["proptest-support", "serde-serialize"] }
serde = "1.0.188"
serde_json = "1.0.105"
more-asserts = "0.3.1"
simba = { version = "0.9.0", features = ["wide"] }
num = "0.4.3"
autofloat = { version = "1.0.3", features = ["nalgebra", "simba"] }

[dev-dependencies]
proptest = "1.0.0"
test-strategy = "0.4.3"
approx = "0.5.1"
test-case = "2.2.2"
